--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urnovl</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="icon-180x180.png" type="image/png">
+    <style>
+        * {
+            font-family: "Open Sans", sans-serif;
+            font-weight: 400;
+        }
+    </style>
+    <title>Urnovl Web Components</title>
 </head>
 
 <body>
-    <a href="storybook-static">Storybook</a>
+    <a href="storybook-static">Go to Storybook</a>
 </body>
 
 </html>
