--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -518,7 +518,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-ldYaxZnK.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DIpfTKVr.js"></script>
   </head>
 
   <body>
