--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -9,4 +9,8 @@
         font-family: "Open Sans", sans-serif;
         font-weight: 400;
     }
+
+    :root {
+        /*--mdui-shape-corner-full: 8px;*/
+    }
 </style>
