--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -525,7 +525,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-Bv8SZAqE.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DLrE2JSE.js"></script>
   </head>
 
   <body>
