--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -519,13 +519,9 @@
         font-family: "Open Sans", sans-serif;
         font-weight: 400;
     }
-
-    :root {
-        /*--mdui-shape-corner-full: 8px;*/
-    }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-CY6W2icY.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cjl52Vr_.js"></script>
   </head>
 
   <body>
