--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -9,4 +9,8 @@
         font-family: "Open Sans", sans-serif;
         font-weight: 400;
     }
+
+    :root {
+        --mdui-color-primary: 0, 153, 255;
+    }
 </style>
