--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -10,7 +10,23 @@
         font-weight: 400;
     }
 
+    /* urnovl theme */
+
     :root {
-        --mdui-color-primary: 0, 153, 255;
+        /* primary */
+        --mdui-color-primary-light: 0, 153, 255;
+        --mdui-color-primary-dark: 161, 202, 253;
+        /* surface */
+        --mdui-color-surface-light: 247, 247, 247;
+        --mdui-color-surface-dark: 17, 20, 24;
+        /* on-background */
+        --mdui-color-on-background-light: 25, 28, 32;
+        --mdui-color-on-background-dark: 225, 226, 232;
+        /* on-surface-variant */
+        --mdui-color-on-surface-variant-light: 73, 69, 78;
+        --mdui-color-on-surface-variant-dark: 202, 196, 208;
+        /* on-surface */
+        --mdui-color-on-surface-light: 25, 28, 32;
+        --mdui-color-on-surface-dark: 225, 226, 232;
     }
 </style>
