--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -16,6 +16,9 @@
         /* primary */
         --mdui-color-primary-light: 0, 153, 255;
         --mdui-color-primary-dark: 161, 202, 253;
+        /* on-primary */
+        --mdui-color-on-primary-light: 255, 255, 255;
+        --mdui-color-on-primary-dark: 0, 50, 89;
         /* surface */
         --mdui-color-surface-light: 247, 247, 247;
         --mdui-color-surface-dark: 17, 20, 24;
