--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -31,5 +31,8 @@
         /* on-surface */
         --mdui-color-on-surface-light: 25, 28, 32;
         --mdui-color-on-surface-dark: 225, 226, 232;
+        /* outline */
+        --mdui-color-outline-light: 115, 119, 127;
+        --mdui-color-outline-dark: 141, 145, 153;
     }
 </style>
