--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -420,5 +420,13 @@
         --mdui-color-on-container-lite-light: 72, 73, 74;
         --mdui-color-primary-fixed-col-light: 0, 153, 255;
         --mdui-on-dark-label-fixed-light: 255, 255, 255;
+
+        --mdui-shape-corner-none: 0;
+        --mdui-shape-corner-extra-small: 4px;
+        --mdui-shape-corner-small: 8px;
+        --mdui-shape-corner-medium: 12px;
+        --mdui-shape-corner-large: 16px;
+        --mdui-shape-corner-extra-large: 28px;
+        --mdui-shape-corner-full: 1000px;
     }
 </style>
