--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -941,7 +941,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-CDqRad5Y.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-KAl-ntqo.js"></script>
   </head>
 
   <body>
