--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -941,7 +941,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-Cqt31DKC.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B8mPeb-l.js"></script>
   </head>
 
   <body>
