--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -941,7 +941,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe--a3ShADZ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Ddb6aAYz.js"></script>
   </head>
 
   <body>
