--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -942,7 +942,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-C7bJIY0d.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-pF7IcSZ4.js"></script>
   </head>
 
   <body>
