--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -942,7 +942,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-BSQjpVS2.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-ChNXCD7z.js"></script>
   </head>
 
   <body>
