--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -944,7 +944,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-DW3woB5w.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cs2PaaCI.js"></script>
   </head>
 
   <body>
