--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -944,7 +944,7 @@
     }
 </style>
 
-    <script type="module" crossorigin src="./assets/iframe-CVL7yZEk.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Bg28jujQ.js"></script>
   </head>
 
   <body>
